--- a/20250811_emotkizywnosc.html
+++ b/20250811_emotkizywnosc.html
@@ -87,7 +87,7 @@
 <body>
   <div class="app" role="application">
     <header>
-      <div class="top-left"><div class="muted">Czas:</div>&nbsp;<div class="time">30s</div></div>
+      <div class="top-left"><div class="muted">Czas:</div>&nbsp;<div class="time">60s</div></div>
       <div class="top-right"><div class="muted">Punkty:</div>&nbsp;<div class="score">0</div></div>
     </header>
 
@@ -102,7 +102,7 @@
         <button id="hintBtn" class="btn-small">Pokaż podpowiedź</button>
       </div>
 
-      <footer class="muted" style="margin-top:8px">Zgadnij emotkę — możesz wpisywać po polsku lub po angielsku. Błędna odpowiedź: -5s.</footer>
+      <footer class="muted" style="margin-top:8px">Zgadnij emotkę — możesz wpisywać po polsku lub po angielsku. Błędna odpowiedź: -1s.</footer>
     </main>
   </div>
 
@@ -126,68 +126,68 @@
       {emoji:'🍓', pl:'Truskawka', en:'Strawberry', others:['truskawki']},
       {emoji:'🍒', pl:'Wiśnia', en:'Cherry', others:['czereśnia']},
       {emoji:'🍎', pl:'Jabłko', en:'Apple', others:['jablko']},
-      {emoji:'🍅', pl:'Pomidor', en:'Tomato', others:[]},
-      {emoji:'🍉', pl:'Arbuz', en:'Watermelon', others:[]},
-      {emoji:'🍑', pl:'Brzoskwinia', en:'Peach', others:[]},
+      {emoji:'🍅', pl:'Pomidor', en:'Tomato', others:['raspberry tomato']},
+      {emoji:'🍉', pl:'Arbuz', en:'Watermelon', others:['kawon']},
+      {emoji:'🍑', pl:'Brzoskwinia', en:'Peach', others:['pracy']},
       {emoji:'🍊', pl:'Pomarańcza', en:'Orange', others:['pomarancza']},
       {emoji:'🥕', pl:'Marchewka', en:'Carrot', others:['marchew']},
-      {emoji:'🍍', pl:'Ananas', en:'Pineapple', others:[]},
+      {emoji:'🍍', pl:'Ananas', en:'Pineapple', others:['canned pineapple']},
       {emoji:'🍌', pl:'Banan', en:'Banana', others:['banany']},
       {emoji:'🌽', pl:'Kukurydza', en:'Corn', others:['kolba kukurydzy']},
-      {emoji:'🍋', pl:'Cytryna', en:'Lemon', others:[]},
-      {emoji:'🍐', pl:'Gruszka', en:'Pear', others:[]},
-      {emoji:'🥝', pl:'Kiwi', en:'Kiwi', others:[]},
+      {emoji:'🍋', pl:'Cytryna', en:'Lemon', others:['citron']},
+      {emoji:'🍐', pl:'Gruszka', en:'Pear', others:['pearl']},
+      {emoji:'🥝', pl:'Kiwi', en:'Kiwi', others:['kiki']},
       {emoji:'🥦', pl:'Brokuł', en:'Broccoli', others:['brokuly']},
       {emoji:'🥒', pl:'Ogórek', en:'Cucumber', others:['ogorek']},
       {emoji:'🫐', pl:'Borówka', en:'Blueberry', others:['jagoda']},
       {emoji:'🍇', pl:'Winogrono', en:'Grape', others:['winogrona']},
-      {emoji:'🥥', pl:'Kokos', en:'Coconut', others:[]},
+      {emoji:'🥥', pl:'Kokos', en:'Coconut', others:['coconuts']},
       {emoji:'🥔', pl:'Ziemniak', en:'Potato', others:['kartofel']},
-      {emoji:'🧅', pl:'Cebula', en:'Onion', others:[]},
-      {emoji:'🥜', pl:'Orzech', en:'Peanut', others:['orzeszek']},
-      {emoji:'🍞', pl:'Chleb', en:'Bread', others:[]},
-      {emoji:'🫓', pl:'Placek', en:'Flatbread', others:['pita']},
-      {emoji:'🥐', pl:'Rogalik', en:'Croissant', others:[]},
-      {emoji:'🥖', pl:'Bagietka', en:'Baguette', others:[]},
+      {emoji:'🧅', pl:'Cebula', en:'Onion', others:['celluloid']},
+      {emoji:'🥜', pl:'Orzech', en:'Peanut', others:['orzeszek', 'nut', 'cob']},
+      {emoji:'🍞', pl:'Chleb', en:'Bread', others:['loaf']},
+      {emoji:'🫓', pl:'Placek', en:'Flatbread', others:['pita', 'cake', 'fritter', 'flan', 'crumpet', 'pat', 'spot']},
+      {emoji:'🥐', pl:'Rogalik', en:'Croissant', others:['twirl']},
+      {emoji:'🥖', pl:'Bagietka', en:'Baguette', others:['baguettes']},
       {emoji:'🧇', pl:'Gofr', en:'Waffle', others:['gofry']},
       {emoji:'🥞', pl:'Naleśnik', en:'Pancake', others:['nalesniki']},
-      {emoji:'🥚', pl:'Jajko', en:'Egg', others:[]},
+      {emoji:'🥚', pl:'Jajko', en:'Egg', others:['fried egg']},
       {emoji:'🧀', pl:'Ser', en:'Cheese', others:['ser zolty']},
       {emoji:'🍔', pl:'Hamburger', en:'Hamburger', others:['burger']},
-      {emoji:'🌭', pl:'Hot dog', en:'Hot Dog', others:[]},
-      {emoji:'🥪', pl:'Kanapka', en:'Sandwich', others:[]},
-      {emoji:'🍟', pl:'Frytki', en:'French Fries', others:['fryt']},
-      {emoji:'🍕', pl:'Pizza', en:'Pizza', others:[]},
-      {emoji:'🥙', pl:'Kebab', en:'Stuffed Flatbread', others:[]},
-      {emoji:'🍝', pl:'Spaghetti', en:'Spaghetti', others:[]},
-      {emoji:'🍣', pl:'Sushi', en:'Sushi', others:[]},
-      {emoji:'🍚', pl:'Ryż', en:'Cooked Rice', others:['ryz']},
+      {emoji:'🌭', pl:'Hot dog', en:'Hot Dog', others:['hotdog']},
+      {emoji:'🥪', pl:'Kanapka', en:'Sandwich', others:['settee', 'divan']},
+      {emoji:'🍟', pl:'Frytki', en:'French Fries', others:['fryt', 'chips', 'fries']},
+      {emoji:'🍕', pl:'Pizza', en:'Pizza', others:['pica']},
+      {emoji:'🥙', pl:'Kebab', en:'Stuffed Flatbread', others:['kebap']},
+      {emoji:'🍝', pl:'Spaghetti', en:'Spaghetti', others:['spagetti']},
+      {emoji:'🍣', pl:'Sushi', en:'Sushi', others:['susi']},
+      {emoji:'🍚', pl:'Ryż', en:'Cooked Rice', others:['ryz', 'rice']},
       {emoji:'🥟', pl:'Pierożek', en:'Dumpling', others:['pierozki', 'pieróg', "pierogi"]},
       {emoji:'🍫', pl:'Czekolada', en:'Chocolate', others:['czekoladki']}
      ],
      medium:[
-      {emoji:'🌶️', pl:'Papryka chili', en:'Chili Pepper', others:['chili','ostra papryka', 'papryka chili']},
-      {emoji:'🥭', pl:'Mango', en:'Mango', others:[]},
-      {emoji:'🍈', pl:'Melon', en:'Melon', others:[]},
-      {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['salata']},
-      {emoji:'🫑', pl:'Papryka', en:'Bell Pepper', others:['papryka slodka']},
-      {emoji:'🍏', pl:'Zielone jabłko', en:'Green Apple', others:['zielone jablko']},
-      {emoji:'🥑', pl:'Awokado', en:'Avocado', others:[]},
-      {emoji:'🫒', pl:'Oliwka', en:'Olive', others:['oliwki']},
+      {emoji:'🌶️', pl:'Papryka chili', en:'Chili Pepper', others:['chili','ostra papryka', 'papryka chili', 'pepper chili']},
+      {emoji:'🥭', pl:'Mango', en:'Mango', others:['manga']},
+      {emoji:'🍈', pl:'Melon', en:'Melon', others:['melons']},
+      {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['salata', 'salad']},
+      {emoji:'🫑', pl:'Papryka', en:'Bell Pepper', others:['papryka slodka', 'pepper']},
+      {emoji:'🍏', pl:'Zielone jabłko', en:'Green Apple', others:['zielone jablko', 'apple']},
+      {emoji:'🥑', pl:'Awokado', en:'Avocado', others:['avocados']},
+      {emoji:'🫒', pl:'Oliwka', en:'Olive', others:['oliwki', 'olives']},
       {emoji:'🍆', pl:'Bakłażan', en:'Eggplant', others:['baklazan']},
-      {emoji:'🍠', pl:'Batat', en:'Sweet Potato', others:['slodki ziemniak']},
-      {emoji:'🧄', pl:'Czosnek', en:'Garlic', others:[]},
-      {emoji:'🌰', pl:'Kasztan', en:'Chestnut', others:[]},
-      {emoji:'🍳', pl:'Jajko sadzone', en:'Fried Egg', others:['jajecznica']},
-      {emoji:'🥓', pl:'Bekon', en:'Bacon', others:[]},
-      {emoji:'🥩', pl:'Stek', en:'Steak', others:['mieso']},
-      {emoji:'🍗', pl:'Udko', en:'Poultry Leg', others:['kurczak']},
-      {emoji:'🥨', pl:'Precel', en:'Pretzel', others:[]},
-      {emoji:'🥫', pl:'Puszka jedzenia', en:'Canned Food', others:['can']},
-      {emoji:'🥗', pl:'Sałatka', en:'Green Salad', others:['salatka']},
-      {emoji:'🍲', pl:'Zupa', en:'Pot of Food', others:['gulasz']},
-      {emoji:'🦞', pl:'Homar', en:'Lobster', others:[]},
-      {emoji:'🍤', pl:'Krewetka', en:'Fried Shrimp', others:['krewetki']},
+      {emoji:'🍠', pl:'Batat', en:'Sweet Potato', others:['slodki ziemniak', 'potato']},
+      {emoji:'🧄', pl:'Czosnek', en:'Garlic', others:['garlics']},
+      {emoji:'🌰', pl:'Kasztan', en:'Chestnut', others:['castor']},
+      {emoji:'🍳', pl:'Jajko sadzone', en:'Fried Egg', others:['jajecznica', 'egg']},
+      {emoji:'🥓', pl:'Bekon', en:'Bacon', others:['brisket']},
+      {emoji:'🥩', pl:'Stek', en:'Steak', others:['mieso', 'meat']},
+      {emoji:'🍗', pl:'Udko', en:'Poultry Leg', others:['kurczak', 'thigh', 'chicken']},
+      {emoji:'🥨', pl:'Precel', en:'Pretzel', others:['cracknel']},
+      {emoji:'🥫', pl:'Puszka jedzenia', en:'Canned Food', others:['can', 'a can of food', 'can of food', 'box', 'tin', 'canister', 'pyxis']},
+      {emoji:'🥗', pl:'Sałatka', en:'Green Salad', others:['salatka', 'salad']},
+      {emoji:'🍲', pl:'Zupa', en:'Pot of Food', others:['gulasz', 'soup', 'gippo']},
+      {emoji:'🦞', pl:'Homar', en:'Lobster', others:['crab', 'cancer']},
+      {emoji:'🍤', pl:'Krewetka', en:'Fried Shrimp', others:['krewetki', 'prawn']},
       {emoji:'🥡', pl:'Pudełko na wynos', en:'Takeout Box', others:[]},
       {emoji:'🍘', pl:'Cracker ryżowy', en:'Rice Cracker', others:[]},
       {emoji:'🍧', pl:'Lody w kubku', en:'Shaved Ice', others:[]},
@@ -272,7 +272,7 @@
     const RECORD_KEY = 'zywnosc_emotki_best';
 
     // Game state
-    let timeLeft = 30;
+    let timeLeft = 60;
     let score = 0;
     let timerInterval = null;
     let gameActive = false;
@@ -372,7 +372,7 @@
 
     function startGame(){
       // reset
-      timeLeft = 30; score = 0; roundCount = 1; gameActive=true;
+      timeLeft = 60; score = 0; roundCount = 1; gameActive=true;
       preparePools();
       nextItem();
       updateHUD();
@@ -392,13 +392,13 @@
         .filter(Boolean).map(normalizeAnswer);
       if(accepted.includes(answer)){
         score += 1;
-        const bonus = (roundCount === 1) ? 3 : 1;
+        const bonus = (roundCount === 1) ? 5 : 1;
         timeLeft += bonus;
         updateHUD();
         guessInput.value = '';
         nextItem();
       } else {
-        timeLeft -= 3; // zmiana z -5s na -3s
+        timeLeft -= 1; // zmiana z -5s na -1s
         if(timeLeft < 0) timeLeft = 0;
         revealText.textContent = `${currentItem.pl} / ${currentItem.en}`;
         updateHUD();
