--- a/20250811_emotkizywnosc.html
+++ b/20250811_emotkizywnosc.html
@@ -127,7 +127,7 @@
       {emoji:'🍒', pl:'Wiśnia', en:'Cherry', others:['czereśnia']},
       {emoji:'🍎', pl:'Jabłko', en:'Apple', others:['jablko']},
       {emoji:'🍅', pl:'Pomidor', en:'Tomato', others:['raspberry tomato']},
-      {emoji:'🍉', pl:'Arbuz', en:'Watermelon', others:['kawon']},
+      {emoji:'🍉', pl:'Arbuz', en:'Watermelon', others:['kawon', 'watermellon']},
       {emoji:'🍑', pl:'Brzoskwinia', en:'Peach', others:['pracy']},
       {emoji:'🍊', pl:'Pomarańcza', en:'Orange', others:['pomarancza']},
       {emoji:'🥕', pl:'Marchewka', en:'Carrot', others:['marchew']},
@@ -140,17 +140,17 @@
       {emoji:'🥦', pl:'Brokuł', en:'Broccoli', others:['brokuly']},
       {emoji:'🥒', pl:'Ogórek', en:'Cucumber', others:['ogorek']},
       {emoji:'🫐', pl:'Borówka', en:'Blueberry', others:['jagoda']},
-      {emoji:'🍇', pl:'Winogrono', en:'Grape', others:['winogrona']},
+      {emoji:'🍇', pl:'Winogrono', en:'Grape', others:['winogrona', 'grałem']},
       {emoji:'🥥', pl:'Kokos', en:'Coconut', others:['coconuts']},
       {emoji:'🥔', pl:'Ziemniak', en:'Potato', others:['kartofel']},
-      {emoji:'🧅', pl:'Cebula', en:'Onion', others:['celluloid']},
+      {emoji:'🧅', pl:'Cebula', en:'Onion', others:['celluloid', 'imion']},
       {emoji:'🥜', pl:'Orzech', en:'Peanut', others:['orzeszek', 'nut', 'cob']},
       {emoji:'🍞', pl:'Chleb', en:'Bread', others:['loaf']},
       {emoji:'🫓', pl:'Placek', en:'Flatbread', others:['pita', 'cake', 'fritter', 'flan', 'crumpet', 'pat', 'spot']},
       {emoji:'🥐', pl:'Rogalik', en:'Croissant', others:['twirl']},
       {emoji:'🥖', pl:'Bagietka', en:'Baguette', others:['baguettes']},
       {emoji:'🧇', pl:'Gofr', en:'Waffle', others:['gofry']},
-      {emoji:'🥞', pl:'Naleśnik', en:'Pancake', others:['nalesniki']},
+      {emoji:'🥞', pl:'Naleśnik', en:'Pancake', others:['nalesniki', 'pan ale']},
       {emoji:'🥚', pl:'Jajko', en:'Egg', others:['fried egg']},
       {emoji:'🧀', pl:'Ser', en:'Cheese', others:['ser zolty']},
       {emoji:'🍔', pl:'Hamburger', en:'Hamburger', others:['burger']},
@@ -188,45 +188,45 @@
       {emoji:'🍲', pl:'Zupa', en:'Pot of Food', others:['gulasz', 'soup', 'gippo']},
       {emoji:'🦞', pl:'Homar', en:'Lobster', others:['crab', 'cancer']},
       {emoji:'🍤', pl:'Krewetka', en:'Fried Shrimp', others:['krewetki', 'prawn']},
-      {emoji:'🥡', pl:'Pudełko na wynos', en:'Takeout Box', others:[]},
-      {emoji:'🍘', pl:'Cracker ryżowy', en:'Rice Cracker', others:[]},
-      {emoji:'🍧', pl:'Lody w kubku', en:'Shaved Ice', others:[]},
-      {emoji:'🍨', pl:'Lody', en:'Ice Cream', others:['lody w pucharku']},
-      {emoji:'🍦', pl:'Lody w rożku', en:'Soft Ice Cream', others:['rozek']},
-      {emoji:'🥧', pl:'Ciasto', en:'Pie', others:[]},
-      {emoji:'🍰', pl:'Tort', en:'Shortcake', others:['ciasto']},
-      {emoji:'🍮', pl:'Budyń', en:'Custard', others:[]},
-      {emoji:'🎂', pl:'Urodzinowy tort', en:'Birthday Cake', others:[]},
-      {emoji:'🧁', pl:'Babeczka', en:'Cupcake', others:[]},
-      {emoji:'🍭', pl:'Lizak', en:'Lollipop', others:[]},
-      {emoji:'🍬', pl:'Cukierek', en:'Candy', others:['cukierki']},
-      {emoji:'🍩', pl:'Pączek', en:'Doughnut', others:['paczek']},
+      {emoji:'🥡', pl:'Pudełko na wynos', en:'Takeout Box', others:['takeaway box', 'takeaway packaging']},
+      {emoji:'🍘', pl:'Cracker ryżowy', en:'Rice Cracker', others:['rice cake']},
+      {emoji:'🍧', pl:'Lody w kubku', en:'Shaved Ice', others:['ice cream']},
+      {emoji:'🍨', pl:'Lody', en:'Ice Cream', others:['lody w pucharku', 'ice-cream']},
+      {emoji:'🍦', pl:'Lody w rożku', en:'Soft Ice Cream', others:['rozek', 'ice cream']},
+      {emoji:'🥧', pl:'Ciasto', en:'Pie', others:['cake']},
+      {emoji:'🍰', pl:'Tort', en:'Shortcake', others:['ciasto', 'cake']},
+      {emoji:'🍮', pl:'Budyń', en:'Custard', others:['pudding']},
+      {emoji:'🎂', pl:'Urodzinowy tort', en:'Birthday Cake', others:['cake']},
+      {emoji:'🧁', pl:'Babeczka', en:'Cupcake', others:['muffin']},
+      {emoji:'🍭', pl:'Lizak', en:'Lollipop', others:['lollypop']},
+      {emoji:'🍬', pl:'Cukierek', en:'Candy', others:['cukierki', 'sweet', 'goody', 'sweatmeat', 'sweetie', 'comfit']},
+      {emoji:'🍩', pl:'Pączek', en:'Doughnut', others:['paczek', 'donut']},
       {emoji:'🍪', pl:'Ciastko', en:'Cookie', others:['ciasteczko']},
-      {emoji:'🍯', pl:'Miód', en:'Honey', others:['miodek']},
-      {emoji:'🧂', pl:'Sól', en:'Salt', others:[]},
-      {emoji:'🧈', pl:'Masło', en:'Butter', others:[]},
-      {emoji:'🍿', pl:'Popcorn', en:'Popcorn', others:[]},
-      {emoji:'🧊', pl:'Kostka lodu', en:'Ice Cube', others:['lód']},
-      {emoji:'🥤', pl:'Napój w kubku', en:'Cup with Straw', others:[]},
-      {emoji:'🧋', pl:'Bubble tea', en:'Bubble Tea', others:[]},
-      {emoji:'🧃', pl:'Sok', en:'Beverage Box', others:['karton soku']},
-      {emoji:'🥛', pl:'Mleko', en:'Milk', others:[]},
-      {emoji:'🍼', pl:'Butelka dla dziecka', en:'Baby Bottle', others:[]},
-      {emoji:'🍵', pl:'Herbata', en:'Teacup Without Handle', others:[]},
+      {emoji:'🍯', pl:'Miód', en:'Honey', others:['miodek', 'mead']},
+      {emoji:'🧂', pl:'Sól', en:'Salt', others:['saline']},
+      {emoji:'🧈', pl:'Masło', en:'Butter', others:['peanut butter']},
+      {emoji:'🍿', pl:'Popcorn', en:'Popcorn', others:['popcorns']},
+      {emoji:'🧊', pl:'Kostka lodu', en:'Ice Cube', others:['lód', 'ice']},
+      {emoji:'🥤', pl:'Napój w kubku', en:'Cup with Straw', others:['drink', 'mug', 'cup', 'straw']},
+      {emoji:'🧋', pl:'Bubble tea', en:'Bubble Tea', others:['tea']},
+      {emoji:'🧃', pl:'Sok', en:'Beverage Box', others:['karton soku', 'juice']},
+      {emoji:'🥛', pl:'Mleko', en:'Milk', others:['coconut milk']},
+      {emoji:'🍼', pl:'Butelka dla dziecka', en:'Baby Bottle', others:['milk', 'bottle']},
+      {emoji:'🍵', pl:'Herbata', en:'Teacup Without Handle', others:['tea', 'infusion']},
       {emoji:'☕', pl:'Kawa', en:'Coffee', others:['filiżanka kawy']},
-      {emoji:'🫖', pl:'Czajnik', en:'Teapot', others:[]},
-      {emoji:'🍺', pl:'Piwo', en:'Beer', others:[]},
-      {emoji:'🍻', pl:'Kufle piwa', en:'Clinking Beer Mugs', others:[]},
-      {emoji:'🍾', pl:'Szampan', en:'Bottle with Popping Cork', others:[]},
-      {emoji:'🍷', pl:'Wino', en:'Wine', others:[]},
-      {emoji:'🥃', pl:'Whisky', en:'Whisky Glass', others:[]},
-      {emoji:'🍸', pl:'Koktajl', en:'Cocktail Glass', others:[]},
-      {emoji:'🍹', pl:'Drink', en:'Tropical Drink', others:[]},
-      {emoji:'🥢', pl:'Pałeczki', en:'Chopsticks', others:[]},
-      {emoji:'🍴', pl:'Sztućce', en:'Fork and Knife', others:[]},
-      {emoji:'🥄', pl:'Łyżka', en:'Spoon', others:[]},
-      {emoji:'🔪', pl:'Nóż kuchenny', en:'Kitchen Knife', others:['nóż']},
-      {emoji:'🍽️', pl:'Talerz ze sztućcami', en:'Fork and Knife with Plate', others:[]}
+      {emoji:'🫖', pl:'Czajnik', en:'Teapot', others:['kettle']},
+      {emoji:'🍺', pl:'Piwo', en:'Beer', others:['liquor', 'mug']},
+      {emoji:'🍻', pl:'Kufle piwa', en:'Clinking Beer Mugs', others:['beer']},
+      {emoji:'🍾', pl:'Szampan', en:'Bottle with Popping Cork', others:['champagne']},
+      {emoji:'🍷', pl:'Wino', en:'Wine', others:['vine', 'liquor']},
+      {emoji:'🥃', pl:'Whisky', en:'Whisky Glass', others:['whiskey', 'beer']},
+      {emoji:'🍸', pl:'Koktajl', en:'Cocktail Glass', others:['glass', 'glassful']},
+      {emoji:'🍹', pl:'Drink', en:'Tropical Drink', others:['juice']},
+      {emoji:'🥢', pl:'Pałeczki', en:'Chopsticks', others:['rod']},
+      {emoji:'🍴', pl:'Sztućce', en:'Fork and Knife', others:['cutlery']},
+      {emoji:'🥄', pl:'Łyżka', en:'Spoon', others:['scoop']},
+      {emoji:'🔪', pl:'Nóż kuchenny', en:'Kitchen Knife', others:['nóż', 'knife', 'blader', 'cutter']},
+      {emoji:'🍽️', pl:'Talerz ze sztućcami', en:'Fork and Knife with Plate', others:['plate', 'cymbal', 'disk', 'ileum', 'platter']}
      ],
      hard:[
       {emoji:'🥯', pl:'Bajgiel', en:'Bagel', others:[]},
