--- a/20250811_emotkizywnosc.html
+++ b/20250811_emotkizywnosc.html
@@ -144,7 +144,7 @@
       {emoji:'🥥', pl:'Kokos', en:'Coconut', others:['coconuts']},
       {emoji:'🥔', pl:'Ziemniak', en:'Potato', others:['kartofel']},
       {emoji:'🧅', pl:'Cebula', en:'Onion', others:['celluloid', 'imion']},
-      {emoji:'🥜', pl:'Orzech', en:'Peanut', others:['orzeszek', 'nut', 'cob']},
+      {emoji:'🥜', pl:'Orzech', en:'Peanut', others:['orzeszek', 'nut', 'cob', 'prabuty']},
       {emoji:'🍞', pl:'Chleb', en:'Bread', others:['loaf']},
       {emoji:'🫓', pl:'Placek', en:'Flatbread', others:['pita', 'cake', 'fritter', 'flan', 'crumpet', 'pat', 'spot']},
       {emoji:'🥐', pl:'Rogalik', en:'Croissant', others:['twirl']},
@@ -166,11 +166,11 @@
       {emoji:'🍫', pl:'Czekolada', en:'Chocolate', others:['czekoladki']}
      ],
      medium:[
-      {emoji:'🌶️', pl:'Papryka chili', en:'Chili Pepper', others:['chili','ostra papryka', 'papryka chili', 'pepper chili']},
+      {emoji:'🌶️', pl:'Papryka chili', en:'Chili Pepper', others:['chili','ostra papryka', 'papryka chili', 'pepper chili', 'lepper chili', 'chili lepper']},
       {emoji:'🥭', pl:'Mango', en:'Mango', others:['manga']},
       {emoji:'🍈', pl:'Melon', en:'Melon', others:['melons']},
-      {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['salata', 'salad']},
-      {emoji:'🫑', pl:'Papryka', en:'Bell Pepper', others:['papryka slodka', 'pepper']},
+      {emoji:'🥬', pl:'Sałata', en:'Lettuce', others:['salata', 'salad', 'skąd']},
+      {emoji:'🫑', pl:'Papryka', en:'Bell Pepper', others:['papryka slodka', 'pepper', 'lepper']},
       {emoji:'🍏', pl:'Zielone jabłko', en:'Green Apple', others:['zielone jablko', 'apple']},
       {emoji:'🥑', pl:'Awokado', en:'Avocado', others:['avocados']},
       {emoji:'🫒', pl:'Oliwka', en:'Olive', others:['oliwki', 'olives']},
@@ -184,7 +184,7 @@
       {emoji:'🍗', pl:'Udko', en:'Poultry Leg', others:['kurczak', 'thigh', 'chicken']},
       {emoji:'🥨', pl:'Precel', en:'Pretzel', others:['cracknel']},
       {emoji:'🥫', pl:'Puszka jedzenia', en:'Canned Food', others:['can', 'a can of food', 'can of food', 'box', 'tin', 'canister', 'pyxis']},
-      {emoji:'🥗', pl:'Sałatka', en:'Green Salad', others:['salatka', 'salad']},
+      {emoji:'🥗', pl:'Sałatka', en:'Green Salad', others:['salatka', 'salad', 'skąd']},
       {emoji:'🍲', pl:'Zupa', en:'Pot of Food', others:['gulasz', 'soup', 'gippo']},
       {emoji:'🦞', pl:'Homar', en:'Lobster', others:['crab', 'cancer']},
       {emoji:'🍤', pl:'Krewetka', en:'Fried Shrimp', others:['krewetki', 'prawn']},
@@ -207,7 +207,7 @@
       {emoji:'🧈', pl:'Masło', en:'Butter', others:['peanut butter']},
       {emoji:'🍿', pl:'Popcorn', en:'Popcorn', others:['popcorns']},
       {emoji:'🧊', pl:'Kostka lodu', en:'Ice Cube', others:['lód', 'ice']},
-      {emoji:'🥤', pl:'Napój w kubku', en:'Cup with Straw', others:['drink', 'mug', 'cup', 'straw']},
+      {emoji:'🥤', pl:'Napój w kubku', en:'Cup with Straw', others:['drink', 'mug', 'cup', 'straw', 'claas', 'glass']},
       {emoji:'🧋', pl:'Bubble tea', en:'Bubble Tea', others:['tea']},
       {emoji:'🧃', pl:'Sok', en:'Beverage Box', others:['karton soku', 'juice']},
       {emoji:'🥛', pl:'Mleko', en:'Milk', others:['coconut milk']},
@@ -220,7 +220,7 @@
       {emoji:'🍾', pl:'Szampan', en:'Bottle with Popping Cork', others:['champagne']},
       {emoji:'🍷', pl:'Wino', en:'Wine', others:['vine', 'liquor']},
       {emoji:'🥃', pl:'Whisky', en:'Whisky Glass', others:['whiskey', 'beer']},
-      {emoji:'🍸', pl:'Koktajl', en:'Cocktail Glass', others:['glass', 'glassful']},
+      {emoji:'🍸', pl:'Koktajl', en:'Cocktail Glass', others:['glass', 'glassful', 'claas']},
       {emoji:'🍹', pl:'Drink', en:'Tropical Drink', others:['juice']},
       {emoji:'🥢', pl:'Pałeczki', en:'Chopsticks', others:['rod']},
       {emoji:'🍴', pl:'Sztućce', en:'Fork and Knife', others:['cutlery']},
