--- a/20250811_emotkizywnosc.html
+++ b/20250811_emotkizywnosc.html
@@ -215,11 +215,11 @@
       {emoji:'🍵', pl:'Herbata', en:'Teacup Without Handle', others:['tea', 'infusion']},
       {emoji:'☕', pl:'Kawa', en:'Coffee', others:['filiżanka kawy']},
       {emoji:'🫖', pl:'Czajnik', en:'Teapot', others:['kettle']},
-      {emoji:'🍺', pl:'Piwo', en:'Beer', others:['liquor', 'mug']},
-      {emoji:'🍻', pl:'Kufle piwa', en:'Clinking Beer Mugs', others:['beer']},
+      {emoji:'🍺', pl:'Piwo', en:'Beer', others:['liquor', 'mug', 'need']},
+      {emoji:'🍻', pl:'Kufle piwa', en:'Clinking Beer Mugs', others:['beer', 'need']},
       {emoji:'🍾', pl:'Szampan', en:'Bottle with Popping Cork', others:['champagne']},
       {emoji:'🍷', pl:'Wino', en:'Wine', others:['vine', 'liquor']},
-      {emoji:'🥃', pl:'Whisky', en:'Whisky Glass', others:['whiskey', 'beer']},
+      {emoji:'🥃', pl:'Whisky', en:'Whisky Glass', others:['whiskey', 'beer', 'need', 'coca cola', 'coś', 'cola']},
       {emoji:'🍸', pl:'Koktajl', en:'Cocktail Glass', others:['glass', 'glassful', 'claas']},
       {emoji:'🍹', pl:'Drink', en:'Tropical Drink', others:['juice']},
       {emoji:'🥢', pl:'Pałeczki', en:'Chopsticks', others:['rod']},
