--- a/20250811_emotkizywnosc.html
+++ b/20250811_emotkizywnosc.html
@@ -207,20 +207,20 @@
       {emoji:'🧈', pl:'Masło', en:'Butter', others:['peanut butter']},
       {emoji:'🍿', pl:'Popcorn', en:'Popcorn', others:['popcorns']},
       {emoji:'🧊', pl:'Kostka lodu', en:'Ice Cube', others:['lód', 'ice']},
-      {emoji:'🥤', pl:'Napój w kubku', en:'Cup with Straw', others:['drink', 'mug', 'cup', 'straw', 'claas', 'glass']},
-      {emoji:'🧋', pl:'Bubble tea', en:'Bubble Tea', others:['tea']},
+      {emoji:'🥤', pl:'Napój w kubku', en:'Cup with Straw', others:['drink', 'mug', 'cup', 'straw', 'claas', 'glass', 'gładź']},
+      {emoji:'🧋', pl:'Bubble tea', en:'Bubble Tea', others:['tea', 'bubble tra']},
       {emoji:'🧃', pl:'Sok', en:'Beverage Box', others:['karton soku', 'juice']},
       {emoji:'🥛', pl:'Mleko', en:'Milk', others:['coconut milk']},
       {emoji:'🍼', pl:'Butelka dla dziecka', en:'Baby Bottle', others:['milk', 'bottle']},
-      {emoji:'🍵', pl:'Herbata', en:'Teacup Without Handle', others:['tea', 'infusion']},
+      {emoji:'🍵', pl:'Herbata', en:'Teacup Without Handle', others:['tea', 'infusion', 'tra']},
       {emoji:'☕', pl:'Kawa', en:'Coffee', others:['filiżanka kawy']},
       {emoji:'🫖', pl:'Czajnik', en:'Teapot', others:['kettle']},
       {emoji:'🍺', pl:'Piwo', en:'Beer', others:['liquor', 'mug', 'need']},
       {emoji:'🍻', pl:'Kufle piwa', en:'Clinking Beer Mugs', others:['beer', 'need']},
       {emoji:'🍾', pl:'Szampan', en:'Bottle with Popping Cork', others:['champagne']},
       {emoji:'🍷', pl:'Wino', en:'Wine', others:['vine', 'liquor']},
-      {emoji:'🥃', pl:'Whisky', en:'Whisky Glass', others:['whiskey', 'beer', 'need', 'coca cola', 'coś', 'cola']},
-      {emoji:'🍸', pl:'Koktajl', en:'Cocktail Glass', others:['glass', 'glassful', 'claas']},
+      {emoji:'🥃', pl:'Whisky', en:'Whisky Glass', others:['whiskey', 'beer', 'need', 'coca cola', 'coś', 'cola', 'gładź']},
+      {emoji:'🍸', pl:'Koktajl', en:'Cocktail Glass', others:['glass', 'glassful', 'claas', 'gładź']},
       {emoji:'🍹', pl:'Drink', en:'Tropical Drink', others:['juice']},
       {emoji:'🥢', pl:'Pałeczki', en:'Chopsticks', others:['rod']},
       {emoji:'🍴', pl:'Sztućce', en:'Fork and Knife', others:['cutlery']},
