--- a/20250811_emotkizywnosc.html
+++ b/20250811_emotkizywnosc.html
@@ -197,9 +197,9 @@
       {emoji:'🍰', pl:'Tort', en:'Shortcake', others:['ciasto', 'cake']},
       {emoji:'🍮', pl:'Budyń', en:'Custard', others:['pudding']},
       {emoji:'🎂', pl:'Urodzinowy tort', en:'Birthday Cake', others:['cake']},
-      {emoji:'🧁', pl:'Babeczka', en:'Cupcake', others:['muffin']},
+      {emoji:'🧁', pl:'Babeczka', en:'Cupcake', others:['muffin', 'cake']},
       {emoji:'🍭', pl:'Lizak', en:'Lollipop', others:['lollypop']},
-      {emoji:'🍬', pl:'Cukierek', en:'Candy', others:['cukierki', 'sweet', 'goody', 'sweatmeat', 'sweetie', 'comfit']},
+      {emoji:'🍬', pl:'Cukierek', en:'Candy', others:['cukierki', 'sweet', 'goody', 'sweatmeat', 'sweetie', 'comfit', 'sweter']},
       {emoji:'🍩', pl:'Pączek', en:'Doughnut', others:['paczek', 'donut']},
       {emoji:'🍪', pl:'Ciastko', en:'Cookie', others:['ciasteczko']},
       {emoji:'🍯', pl:'Miód', en:'Honey', others:['miodek', 'mead']},
