--- a/20250811_emotkizywnosc.html
+++ b/20250811_emotkizywnosc.html
@@ -225,7 +225,7 @@
       {emoji:'🥢', pl:'Pałeczki', en:'Chopsticks', others:['rod']},
       {emoji:'🍴', pl:'Sztućce', en:'Fork and Knife', others:['cutlery']},
       {emoji:'🥄', pl:'Łyżka', en:'Spoon', others:['scoop']},
-      {emoji:'🔪', pl:'Nóż kuchenny', en:'Kitchen Knife', others:['nóż', 'knife', 'blader', 'cutter']},
+      {emoji:'🔪', pl:'Nóż kuchenny', en:'Kitchen Knife', others:['nóż', 'knife', 'blader', 'cutter', 'knige']},
       {emoji:'🍽️', pl:'Talerz ze sztućcami', en:'Fork and Knife with Plate', others:['plate', 'cymbal', 'disk', 'ileum', 'platter']}
      ],
      hard:[
