--- a/20250811_emotkizywnosc.html
+++ b/20250811_emotkizywnosc.html
@@ -95,7 +95,7 @@
       <div class="reveal" id="revealText"></div>
       <div class="emoji-card" id="emojiCard" aria-live="polite">❓</div>
 
-      <input id="guessInput" type="text" placeholder="Wpisz nazwę emotki (PL / EN)" autocomplete="off" inputmode="text" spellcheck="false" />
+      <input id="guessInput" type="text" placeholder="Wpisz nazwę emotki (PL / EN)" autocomplete="off" inputmode="text" spellcheck="false" autocorrect="off" />
 
       <div class="controls">
         <button id="startBtn" class="btn-start">Rozpocznij Grę</button>
