--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
                 <span>Aplikacje</span>
             </a>
+            <a href="20250812_emotkiflagi.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993032/emotkisolo_wknxl8.png" alt="Emotki">
+                <span>Emotki</span>
+            </a>
             <a href="20250811_wedkarstwo.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754934579/wedkarstwo_yyyxnx.png" alt="Wędkarstwo">
                 <span>Wędkarstwo</span>
@@ -34,10 +38,6 @@
             <a href="20250617_kosmicznykwadrat.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324741/kosmicznykwadrat_ltr6kr.jpg" alt="Kosmiczny Kwadrat">
                 <span>Kosmiczny Kwadrat</span>
-            </a>
-            <a href="20250620_zbieraniejablek.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750450328/logozbieraniajablek_kndluj.png" alt="Zbieranie Jabłek">
-                <span>Zbieranie Jabłek</span>
             </a>
             <a href="20250618_kolkoikrzyzyk.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750324262/kolkoikrzyz2_nmidv4.png" alt="Kółko i Krzyżyk">
