--- a/20250812_emotkiflagi.html
+++ b/20250812_emotkiflagi.html
@@ -131,6 +131,7 @@
   {emoji:'🇮🇹', pl:'Włochy', en:'Italy', others:['Rzym','italian','italia']},
   {emoji:'🇵🇱', pl:'Polska', en:'Poland', others:['Warszawa','polish','polen']},
   {emoji:'🇵🇹', pl:'Portugalia', en:'Portugal', others:['Lizbona','portuguese','portagal']},
+  {emoji:'🇭🇷', pl:'Chorwacja', en:'Croatia', others:['Zagrzeb','croatian','chrovacia']},
   {emoji:'🇺🇸', pl:'Stany Zjednoczone', en:'United States', others:['Waszyngton','american','usa', 'stany']}
      ],
      medium:[
@@ -206,13 +207,12 @@
   {emoji:'🇬🇹', pl:'Gwatemala', en:'Guatemala', others:['Gwatemala City','guatemalan','guatamala']},
   {emoji:'🇬🇾', pl:'Gujana', en:'Guyana', others:['Georgetown','guyanese','guyanna']},
   {emoji:'🇭🇰', pl:'Hongkong', en:'Hong Kong', others:['hongkong','hongkong sar','hk']},
-  {emoji:'🇭🇲', pl:'Wyspy Heard i McDonalda', en:'Heard Island and McDonald Islands', others:['heard island','mcdonald islands', 'mcdonald', 'mcdonalds', 'donald', 'heard']},
+  {emoji:'🇭🇲', pl:'Wyspy Heard i McDonalda', en:'Heard Island and McDonald Islands', others:['heard island','mcdonald islands', 'mcdonald', 'mcdonalds', 'donald', 'heard', 'australia']},
   {emoji:'🇭🇳', pl:'Honduras', en:'Honduras', others:['Tegucigalpa','honduran','hondorus']},
-  {emoji:'🇭🇷', pl:'Chorwacja', en:'Croatia', others:['Zagrzeb','croatian','chrovacia']},
   {emoji:'🇭🇹', pl:'Haiti', en:'Haiti', others:['Port-au-Prince','haitian','haitii']},
   {emoji:'🇭🇺', pl:'Węgry', en:'Hungary', others:['Budapeszt','hungarian','hungaryy']},
   {emoji:'🇮🇨', pl:'Wyspy Kanaryjskie', en:'Canary Islands', others:['Las Palmas','canaries','islas canarias', 'kanary', 'canary']},
-  {emoji:'🇮🇩', pl:'Indonezja', en:'Indonesia', others:['Dżakarta','indonesian','indonasia']},
+  {emoji:'🇮🇩', pl:'Indonezja', en:'Indonesia', others:['Dżakarta','indonesian','indonasia', 'monaco', 'monako']},
   {emoji:'🇮🇪', pl:'Irlandia', en:'Ireland', others:['Dublin','irish','irelnd']},
   {emoji:'🇮🇱', pl:'Izrael', en:'Israel', others:['Jerozolima','israeli','isreal']},
   {emoji:'🇮🇳', pl:'Indie', en:'India', others:['Nowe Delhi','indian','indiaa']},
@@ -242,10 +242,10 @@
   {emoji:'🇱🇻', pl:'Łotwa', en:'Latvia', others:['Ryga','latvian','lotva']},
   {emoji:'🇱🇾', pl:'Libia', en:'Libya', others:['Trypolis','libyan','libyia']},
   {emoji:'🇲🇦', pl:'Maroko', en:'Morocco', others:['Rabat','moroccan','marocco']},
-  {emoji:'🇲🇨', pl:'Monako', en:'Monaco', others:['Monako','monacan','monnaco']},
+  {emoji:'🇲🇨', pl:'Monako', en:'Monaco', others:['Monako','monacan','monnaco', 'indonezja', 'indonesia']},
   {emoji:'🇲🇩', pl:'Mołdawia', en:'Moldova', others:['Kiszyniów','moldovan','moldavia']},
   {emoji:'🇲🇪', pl:'Czarnogóra', en:'Montenegro', others:['Podgorica','montenegrin','montenegoro']},
-  {emoji:'🇲🇫', pl:'Saint-Martin', en:'Saint Martin', others:['Marigot','st martin','saintmartin', 'francja']},
+  {emoji:'🇲🇫', pl:'Saint-Martin', en:'Saint Martin', others:['Marigot','st martin','saintmartin', 'francja', 'france']},
   {emoji:'🇲🇬', pl:'Madagaskar', en:'Madagascar', others:['Antananarywa','malagasy','madagazcar']},
   {emoji:'🇲🇭', pl:'Wyspy Marshalla', en:'Marshall Islands', others:['Majuro','marshallese','marshall island', 'marszal']},
   {emoji:'🇲🇰', pl:'Macedonia Północna', en:'North Macedonia', others:['Skopje','macedonian','fyrom', 'macedonia']},
@@ -315,7 +315,7 @@
   {emoji:'🇹🇿', pl:'Tanzania', en:'Tanzania', others:['Dodoma','tanzanian','tanzanya']},
   {emoji:'🇺🇦', pl:'Ukraina', en:'Ukraine', others:['Kijów','ukrainian','ukraina']},
   {emoji:'🇺🇬', pl:'Uganda', en:'Uganda', others:['Kampala','ugandan','ugandaa']},
-  {emoji:'🇺🇲', pl:'Dalekie Wyspy Mniejsze Stanów Zjednoczonych', en:'United States Minor Outlying Islands', others:['johnston atoll','usmo','palmyra', 'usa', 'stany zjednoczone']},
+  {emoji:'🇺🇲', pl:'Dalekie Wyspy Mniejsze Stanów Zjednoczonych', en:'United States Minor Outlying Islands', others:['johnston atoll','usmo','palmyra', 'usa', 'stany zjednoczone', 'united states']},
   {emoji:'🇺🇳', pl:'Organizacja Narodów Zjednoczonych', en:'United Nations', others:['ONZ','UN','unitednations']},
   {emoji:'🇺🇾', pl:'Urugwaj', en:'Uruguay', others:['Montevideo','uruguayan','urugway']},
   {emoji:'🇺🇿', pl:'Uzbekistan', en:'Uzbekistan', others:['Taszkent','uzbek','uzbekystan']},
@@ -327,6 +327,13 @@
   {emoji:'🇾🇪', pl:'Jemen', en:'Yemen', others:['Sana','yemeni','yaman']},
   {emoji:'🇿🇦', pl:'Republika Południowej Afryki', en:'South Africa', others:['Pretoria','south african','rpa']},
   {emoji:'🇿🇲', pl:'Zambia', en:'Zambia', others:['Lusaka','zambian','zambiya']},
+  {emoji:'🇸🇯', pl:'Svalbard i Jan Mayen', en:'Svalbard and Jan Mayen', others:['Longyearbyen','jan mayen','svalbard', 'jan', 'norwegia', 'norway']},
+  {emoji:'🇪🇦', pl:'Ceuta i Melilla', en:'Ceuta and Melilla', others:['Ceuta','melilla','ceuta melila', 'hiszpania', 'spain']},
+  {emoji:'🇧🇻', pl:'Wyspa Bouveta', en:'Bouvet Island', others:['bouvet','bovet', 'bouveta', 'boveta', 'wyspa', 'norwegia', 'norway']},
+  {emoji:'🇨🇵', pl:'Clipperton', en:'Clipperton Island', others:['clipperton','clippperton', 'france', 'francja']},
+  {emoji:'🏴󠁧󠁢󠁥󠁮󠁧󠁿', pl:'Anglia', en:'England', others:['Londyn','english','kane']},
+  {emoji:'🏴󠁧󠁢󠁷󠁬󠁳󠁿', pl:'Walia', en:'Wales', others:['Cardiff','walie','bale']},
+  {emoji:'🏴󠁧󠁢󠁳󠁣󠁴󠁿', pl:'Szkocja', en:'Scotland', others:['Edynburg','scottish','scot']},
   {emoji:'🇿🇼', pl:'Zimbabwe', en:'Zimbabwe', others:['Harare','zimbabwean','zimbabue']}
      ],
      hard:[
@@ -340,12 +347,9 @@
   {emoji:'🇧🇳', pl:'Brunei', en:'Brunei', others:['Bandar Seri Begawan','bruneian','bruney', 'bruno']},
   {emoji:'🇧🇶', pl:'Bonaire, Sint Eustatius i Saba', en:'Bonaire, Sint Eustatius and Saba', others:['Kralendijk','bonaire','bonnaire', 'bono']},
   {emoji:'🇧🇹', pl:'Bhutan', en:'Bhutan', others:['Thimphu','bhutanese','butan']},
-  {emoji:'🇧🇻', pl:'Wyspa Bouveta', en:'Bouvet Island', others:['bouvet','bovet', 'bouveta', 'boveta', 'wyspa']},
   {emoji:'🇧🇿', pl:'Belize', en:'Belize', others:['Belmopan','belizean','belizee', 'blaiz', 'blitz']},
   {emoji:'🇨🇰', pl:'Wyspy Cooka', en:'Cook Islands', others:['Avarua','cook','cookislands', 'gotuj']},
-  {emoji:'🇨🇵', pl:'Clipperton', en:'Clipperton Island', others:['clipperton','clippperton']},
   {emoji:'🇩🇬', pl:'Diego Garcia', en:'Diego Garcia', others:['diego','diago', 'garcia']},
-  {emoji:'🇪🇦', pl:'Ceuta i Melilla', en:'Ceuta and Melilla', others:['Ceuta','melilla','ceuta melila']},
   {emoji:'🇪🇷', pl:'Erytrea', en:'Eritrea', others:['Asmara','eritrean','eritra']},
   {emoji:'🇫🇰', pl:'Falklandy', en:'Falkland Islands', others:['Stanley','falklander','falklands']},
   {emoji:'🇫🇲', pl:'Mikronezja', en:'Micronesia', others:['Palikir','micronesian','micronisia']},
@@ -370,7 +374,6 @@
   {emoji:'🇵🇳', pl:'Pitcairn', en:'Pitcairn Islands', others:['Adamstown','pitcairner','pitcarn']},
   {emoji:'🇵🇼', pl:'Palau', en:'Palau', others:['Ngerulmud','palauan','palao']},
   {emoji:'🇸🇭', pl:'Wyspa Świętej Heleny', en:'Saint Helena', others:['Jamestown','st helena','saint helena', 'wsh', 'helena']},
-  {emoji:'🇸🇯', pl:'Svalbard i Jan Mayen', en:'Svalbard and Jan Mayen', others:['Longyearbyen','jan mayen','svalbard', 'jan']},
   {emoji:'🇸🇽', pl:'Sint Maarten', en:'Sint Maarten', others:['Philipsburg','dutch sint maarten','st maarten', 'maarten', 'martin']},
   {emoji:'🇸🇿', pl:'Eswatini', en:'Eswatini', others:['Mbabane','swazi','swaziland']},
   {emoji:'🇹🇦', pl:'Tristan da Cunha', en:'Tristan da Cunha', others:['Edinburgh of the Seven Seas','tristan','tda cunha', 'tdc', 'cunha']},
