--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250813_rekordyziemi.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750958807/rekordyziemi_cjdi5w.png" alt="Rekordy Ziemi">
+                <span>Rekordy Ziemi</span>
+            </a>
             <a href="20250812_emotkiflagi.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993042/emotkiflagi_n4wrxw.png" alt="Emotki">
                 <span>Emotki</span>
