--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,30 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="julka.html" class="app-icon">
+                <img src="20250813_julka.png" alt="Julka">
+                <span>Julka</span>
+            </a>
+            <a href="20250813_piesek.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755108163/piesek_r1ucwg.png" alt="Piesek">
+                <span>Piesek</span>
+            </a>
+            <a href="20250813_stoper.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755108089/stoper_jpmxaa.png" alt="Stoper">
+                <span>Stoper</span>
+            </a>
+            <a href="20250813_poop.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755108019/poop.html_rgehum.png" alt="Poop">
+                <span>Poop</span>
+            </a>
+            <a href="gry.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
+                <span>Gry</span>
+            </a>
+            <a href="aplikacje.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251811/aplikacje2_uuvpgl.png" alt="Aplikacje">
+                <span>Aplikacje</span>
+            </a>
             <a href="20250813_rekordyziemi.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750958807/rekordyziemi_cjdi5w.png" alt="Rekordy Ziemi">
                 <span>Rekordy Ziemi</span>
