--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250814_emotkizwierzeta.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755159386/emotkizwierzeta_xlp30a.png" alt="Zwierzęta">
+                <span>Zwierzęta</span>
+            </a>
             <a href="julka.html" class="app-icon">
                 <img src="20250813_julka.png" alt="Julka">
                 <span>Julka</span>
@@ -41,8 +45,8 @@
                 <span>Rekordy Ziemi</span>
             </a>
             <a href="20250812_emotkiflagi.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993042/emotkiflagi_n4wrxw.png" alt="Emotki">
-                <span>Emotki</span>
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754993042/emotkiflagi_n4wrxw.png" alt="Flagi">
+                <span>Flagi</span>
             </a>
             <a href="20250811_emotkizywnosc.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754940082/emotkizywnosc_k8mwn0.png" alt="Żywność">
@@ -169,8 +173,8 @@ for (let i = apps.length - 1; i > 0; i--) {
     [apps[i], apps[j]] = [apps[j], apps[i]];
 }
 
-// Wybieramy 8 pierwszych
-let selectedApps = apps.slice(0, 8);
+// Wybieramy 10 pierwszych
+let selectedApps = apps.slice(0, 10);
 
 // Czyścimy i dodajemy do kontenera
 let container = document.querySelector('.buttons');
