--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250814_natura.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755161140/natura_lpqlhb.png" alt="Natura">
+                <span>Natura</span>
+            </a>
             <a href="20250814_emotkizwierzeta.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755159386/emotkizwierzeta_xlp30a.png" alt="Zwierzęta">
                 <span>Zwierzęta</span>
